WexGit/Wex_DX/force-app/main/default/objects/GIACT_Verify_Response_Codes__mdt/GIACT_Verify_Response_Codes__mdt.object-meta.xml
<CustomObject>
    <label>GIACT Verify Response Code</label>
    <pluralLabel>GIACT Verify Response Codes</pluralLabel>
</CustomObject>