WexGit/Wex_DX/force-app/main/default/objects/GIACT_Verify_Response_Codes__mdt/fields/GIACT_Service__c.field-meta.xml
<CustomField>
    <fullName>GIACT_Service__c</fullName>
    <label>GIACT Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gVerify</fullName>
                <default>true</default>
                <label>gVerify</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>