WexGit/Wex_DX/force-app/main/default/objects/GIACT_Verify_Response_Codes__mdt/fields/Response_Field_Message__c.field-meta.xml
<CustomField>
    <fullName>Response_Field_Message__c</fullName>
    <label>Response Field Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>