WexGit/Wex_DX/force-app/main/default/objects/GIACT_Verify_Response_Codes__mdt/fields/Response_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Response_Field_Name__c</fullName>
    <label>Response Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>